css/forum.css
/**
 * stylesheet for page: forum;
 * @author Mikael Holmbom
 * @version 1.0
 */

@import url("main.css");
@import url("colorschemes/forum_green.css");
@import url("pagination.css");

#forum_content{
	
}

#forum_content_list{
	margin-top: 8px;
	margin-bottom: 20px;
	margin-left: 10px;
	max-width: 92%;
	min-height: 280px;
}
.forum_content_listitem{
	min-height: 0;
	margin-bottom: 8px;
	
}

.forum_content_listitem  a{
	text-decoration: none;

}
.forum_content_listitem .topic:hover{
	text-decoration: underline;
}

.forum_content_listitem:hover .info{
	text-decoration: none;
}

.forum_content_listitem .topic{
	margin-left: 8px;
	margin-top: 3px;
	margin-bottom: 0;
	font-size: 100%;
	font-weight: normal;
}

.forum_content_listitem .info{
	position:relative;
	top:-4px;
	font-size:85%;
	margin-left: 20px;

}

.forum_button{	
	padding-top: 3px;
	padding-bottom: 3px;
}

.topic{
	text-transform: capitalize;
}


/*******************************************
	THREADS
********************************************/

.forum_thread > .info > div{
	display: inline-block;
}
.forum_thread > .info > .indexlink{
	margin-left: 20px;
}
.forum_thread .threadlink_pagination{
	margin-left: 4px;
}
.forum_thread .threadlink_pagination > a{
	margin-left: 2px;
}
.forum_thread .indexlink > div{
	display:inline-block;
}


/********************************************
	POSTS
*********************************************/

.forum_post{
	display: flex;
	padding: 0px;
	border-radius: 5px;
	border-style: ridge;
}

/*		FORUMPOST AUTHOR SECTION
*/
.forum_post .author{
	
}
/* author section in forum post */
.forum_post .author{
	text-align: center;
	
	padding: 0 5px 0 0;
	min-width: 14%;
	
}
/* the author of posts name label */
.forum_post .author .name a{
	font-weight: bold;
	text-decoration: none;
}

.forum_post .author .role{
	position:relative;
	top:-4px;
	font-size: 80%;
}
.forum_post .author .registered{
	font-size: 75%
}

/*		FORUMPOST MESSAGE SECTION
*/
 .option_panel{
	margin-left: 20px;
	margin-bottom: 10px;
}
.forum_post .option_panel form{
	display: block;
}

.forum_post .post{
	position: relative;
	flex: 1;
	padding: 10px 0;
	border-width: medium;
}
.forum_post .message{
	margin-left:12px;
	margin-right: 20px;
	margin-bottom:40px;
}
.forum_post .dates{
	font-size: 85%;
	float:right;
	align-content: bottom;
	position: absolute;
	bottom:4px;
	right: 0;
	margin: 0 20px;
}



/***********************************
	BREADCRUM
*************************************/
#breadcrum{
	margin: 2px 0 10px;
	overflow:auto;
}
 #breadcrum > div{
 	float:left;
	min-width: 90px;
	min-height: 20px;

 }

#breadcrum .breadcrum_link{
	margin: 4px 6px;
	padding: 0px 20px;
	
}

/**************************************
	PAGINATION FORUMPOST
***************************************/



/****************************
 * BUTTONPANEL
 ****************************/

#forum_content{
	
}

 #forum_content h2{
 	display: inline-block;
 	font-weight: bold;
 	font-size: 120%;
 	text-transform: capitalize;
 	margin-bottom: 0;
 }

#forum_top_bts{
	display: inline-block;
	min-height: 32px;
	float:right;
}
#forum_top_bts .button{	
	float:right;
}

#forum_bottom_bts{
	min-height: 32px;
}
#forum_bottom_bts .button{
	float:right;
}

